--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -60,8 +60,11 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
                         <h3><b>Mentorship</b><br>Committee Chair</h3>
                         <hr/>
-                        <img width="20%" height="20%" ng-src="../img/people/profile_leah_001.jpg">
+
                         <h4>Leah Jamison</h4>
+                        <hr/>
+                        <img width="40%" height="20%" ng-src="../img/people/10.2015_leah_jamison_001.jpg" >
+                        <hr/>
                         <h6><a href="leahjamison44@gmail.com">leahjamison44@gmail.com</a></h6>
                         <hr/>
                         <md-content class="md-padding">
@@ -93,8 +96,12 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
                         <h3>Student Membership <br>Committee Chair</h3>
+
                         <hr/>
                         <h4>Dan Erik Karlsson</h4>
+                        <hr/>
+                        <img width="35%" height="40%" ng-src="../img/people/10.2015_dan_karlsson_001.jpg">
+                        <hr/>
                         <h6><a href="mailto:erikdkarlsson8@gmail.com">erikdkarlsson8@gmail.com</a></h6>
                         <hr/>
                         <md-content class="md-padding">
@@ -147,7 +154,9 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Larry Perez</h3>
                         <h5>Math Department</h5>
-                        <img width="20%" height="20%" ng-src="../img/people/profile_perez_001.jpg">
+                        <hr/>
+                        <img width="50%" height="50%" ng-src="../img/people/10.2015_larry_perez_001.jpg">
+                        <hr/>
                         <p><b>E-mail:</b><a href="mailto:lperez@saddleback.edu">LPerez@saddleback.edu</a></p>
 
                         <p>
@@ -160,7 +169,9 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Katlin Choi</h3>
                         <h5>Specialist / Project Specialist Programs</h5>
-                        <img width="20%" height="20%" ng-src="../img/people/profile_katlin_001.jpg">
+                        <hr/>
+                        <img width="40%" height="40%" ng-src="../img/people/10.2015_katlin_choi_001.jpg">
+                        <hr/>
                         <p><b>E-mail:</b><a href="mailto:kchoi@saddleback.edu">kchoi@saddleback.edu</a></p>
 
                         <p><b>About Me</b>
