--- a/app/partials/aboutUs.html
+++ b/app/partials/aboutUs.html
@@ -4,7 +4,7 @@
             <div class="container center-panel">
                 <div class="row">
                     <div class="col-xs-12 col-md-12 col-lg-4">
-                        <h3>President</h3>
+                        <h3><b>President</b></h3>
                         <hr/>
                         <h4>Greg Zeborski</h4>
                         <h6><a href="mailto:gzaborskijr@gmail.com">gzaborskijr@gmail.com</a></h6>
@@ -15,7 +15,7 @@
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-4">
-                        <h3>Vice President</h3>
+                        <h3><b>Vice President</b></h3>
                         <hr/>
                         <h4>Lucas Johnson</h4>
                         <h6><a href="mailto:lucaskjohn@gmail.com">lucaskjohn@gmail.com</a></h6>
@@ -25,7 +25,7 @@
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-4">
-                        <h3>Secretary/Treasurer</h3>
+                        <h3><b>Secretary/Treasurer</b></h3>
                         <hr/>
                         <h4>Nick Abey</h4>
                         <h6><a href="mailto:Nickabey119@gmail.com">Nickabey119@gmail.com</a></h6>
@@ -47,7 +47,7 @@
                 <hr class="featurette-divider">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Program (Monthly Speaker) <br>Committee Chair</h3>
+                        <h3><b>Program (Monthly Speaker)</b><br>Committee Chair</h3>
                         <hr/>
                         <h4>Alex Helms</h4>
                         <h6><a href="mailto:ahelms0@saddleback.edu">ahelms0@saddleback.edu</a></h6>
@@ -62,17 +62,18 @@
                         <hr/>
 
                         <h4>Leah Jamison</h4>
+                        <h6><a href="leahjamison44@gmail.com">leahjamison44@gmail.com</a></h6>
                         <hr/>
                         <img width="40%" height="20%" ng-src="../img/people/10.2015_leah_jamison_001.jpg" >
                         <hr/>
-                        <h6><a href="leahjamison44@gmail.com">leahjamison44@gmail.com</a></h6>
-                        <hr/>
+
+                        <!-- -->
                         <md-content class="md-padding">
                             <b>About Me</b>:<p>Leah grew up in Orange County and is a Civil Engineering major with hopes to transfer Fall 2016. She is a mentor at Mathobotix, teaching K-12 students about robotics and computer science. As our Mentorship Committee Chair, Leah hopes to use her experience to provide similar mentorship to fellow Saddleback students.</p>
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Student Retention<br> Committee Chair</h3>
+                        <h3><b>Student Retention</b><br/>Student Committee Chair</h3>
                         <hr/>
                         <h4>Andy Nelson</h4>
                         <h6><a href="andy.g.nelson@gmail.com">andy.g.nelson@gmail.com</a></h6>
@@ -85,7 +86,7 @@
                 <hr class="featurette-divider">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Fundraising<br> Committee Chair</h3>
+                        <h3><b>Fundraising</b><br>Fundraising> Committee Chair</h3>
                         <hr/>
                         <h4>Dylon Dickinson</h4>
                         <h6><a href="mailto:Ddickson0@saddleback.edu">Ddickson0@saddleback.edu</a></h6>
@@ -95,21 +96,20 @@
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Student Membership <br>Committee Chair</h3>
+                        <h3><b>Student Membership</b><br>Committee Chair</h3>
 
                         <hr/>
                         <h4>Dan Erik Karlsson</h4>
+                        <h6><a href="mailto:erikdkarlsson8@gmail.com"> erikdkarlsson8@gmail.com</a></h6>
                         <hr/>
-                        <img width="35%" height="40%" ng-src="../img/people/10.2015_dan_karlsson_001.jpg">
-                        <hr/>
-                        <h6><a href="mailto:erikdkarlsson8@gmail.com">erikdkarlsson8@gmail.com</a></h6>
+                        <img width="45%" height="40%" ng-src="../img/people/10.2015_dan_karlsson_001.jpg">
                         <hr/>
                         <md-content class="md-padding">
                             <b>About Me</b>:<p>Computer Science Major, and software developer intern at Jet Propulsion Laboratories, JPL/NASA, Pasadena. Transferring to University of California, Irvine next fall. Responsible for the Saddleback SAME Web Application, updating and maintaining the Saddleback's member roster and information.</p>
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Activities / Competition <br>Committee Chair</h3>
+                        <h3><b>Activities / Competition</b><br>Committee Chair</h3>
                         <hr/>
                         <h4>David Turney</h4>
                         <h6><a href="dayvidturnkee@gmail.com">dayvidturnkee@gmail.com</a></h6>
@@ -121,7 +121,7 @@
                 <hr class="featurette-divider">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Student Outreach and Streamers <br> Committee Co-Chair</h3>
+                        <h3><b>Student Outreach and Streamers</b><br> Committee Co-Chair</h3>
                         <hr/>
                         <h4>Jeremy Laster</h4>
                         <h6><a href="mailto:hlaster0317@gmail.com">hlaster0317@gmail.com</a></h6>
@@ -131,7 +131,7 @@
                         </md-content>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
-                        <h3>Student Outreach and Streamers <br> Committee Co-Chair</h3>
+                        <h3><b>Student Outreach and Streamers</b><br> Committee Co-Chair</h3>
                         <hr/>
                         <h4>Chad Province</h4>
                         <h6><a href="mailto:chadj.province@gmail.com">chadj.province@gmail.com</a></h6>
@@ -154,10 +154,10 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Larry Perez</h3>
                         <h5>Math Department</h5>
+                        <h6><b>E-mail:</b><a href="mailto:lperez@saddleback.edu"> LPerez@saddleback.edu</a></h6>
                         <hr/>
-                        <img width="50%" height="50%" ng-src="../img/people/10.2015_larry_perez_002.jpg">
+                        <img width="60%" height="50%" ng-src="../img/people/10.2015_larry_perez_003.jpg">
                         <hr/>
-                        <p><b>E-mail:</b><a href="mailto:lperez@saddleback.edu">LPerez@saddleback.edu</a></p>
 
                         <p>
                             <b>About Me</b>:Larry Perez joined Saddleback College as fulltime faculty in the Department of Mathematics in August, 1999. He served 6 years in the US Navy as a Reactor Operator aboard a Los Angeles Class Fast Attack Submarine prior to his college education. Larry was born and raised here in Southern California in the city of Pico Rivera. He and his wife Georgette both teach mathematics.
@@ -169,10 +169,12 @@
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <h3>Katlin Choi</h3>
                         <h5>Specialist / Project Specialist Programs</h5>
+
+                        <h6><b>E-mail:</b><a href="mailto:kchoi@saddleback.edu"> kchoi@saddleback.edu</a></h6>
                         <hr/>
-                        <img width="40%" height="40%" ng-src="../img/people/10.2015_katlin_choi_001.jpg">
+                        <img width="50%" height="40%" ng-src="../img/people/10.2015_katlin_choi_001.jpg">
                         <hr/>
-                        <p><b>E-mail:</b><a href="mailto:kchoi@saddleback.edu">kchoi@saddleback.edu</a></p>
+
 
                         <p><b>About Me</b>
 
